# my-portfolio

./: CUSTOM_DOMAIN_SETUP.md  DEPLOY.md  FIX_CACHE.md  FREE_SHORT_LINK_OPTIONS.md  QUICK_DEPLOY.md  README.md  SHORT_LINK_GUIDE.md  package.json  temp_fincke.html
app/: globals.css  layout.tsx  page.tsx
app/projects/: page.tsx
components/: Navbar.tsx  ProjectCard.tsx
data/: projects.ts
expertise/: .gitignore  CHANGELOG.md
expertise/boot_bringup/: NOTES.md  README.md  boot_test_log.txt  secure_boot_implementation.c  u_boot_port.c
expertise/bsp/: README.md  TODO.md  device_tree_example.dts  hal_implementation.c  hal_implementation_old.c
expertise/kernel_development/: BUGS.md  README.md  device_driver_example.c  kernel_debugging_guide.md  (+3 more)
projects/: COMPLETION_SUMMARY.md  COMPREHENSIVE_CHECK.md  DEEP_VERIFICATION_REPORT.md  FINAL_AI_CHECK.md  FINAL_DEEP_VERIFICATION.md  FINAL_ULTIMATE_VERIFICATION.md  FINAL_VERIFICATION.md  HUMAN_VERIFICATION.md  ULTIMATE_DEEP_CHECK.md  ULTIMATE_VERIFICATION.md  VERIFICATION_REPORT.md
projects/secure-boot-ota/: CMakeLists.txt  Makefile  README.md
projects/secure-boot-ota/bootloader/include/: boot.h
projects/secure-boot-ota/bootloader/src/: boot.c  decrypt.c  integrity.c  jump.c  verify.c  version.c
projects/secure-boot-ota/config/: boot_config.h  crypto_config.h
projects/secure-boot-ota/crypto/include/: crypto.h
projects/secure-boot-ota/crypto/src/: decrypt.c  encrypt.c  hash.c  key_derivation.c  sign.c  verify.c
projects/secure-boot-ota/demo/: qemu_run.sh  run_demo.sh
projects/secure-boot-ota/firmware/include/: firmware.h
projects/secure-boot-ota/firmware/src/: anti_tamper.c  main.c  mpu_sim.c
projects/secure-boot-ota/ota_client/include/: ota.h
projects/secure-boot-ota/ota_client/src/: download.c  ota_client.c
projects/secure-boot-ota/ota_server/: encrypt_firmware.py  requirements.txt  server.py  sign_firmware.py
projects/secure-boot-ota/tests/: test_boot.c  test_crypto.c  test_ota.c
projects/secure-boot-ota/tools/: create_firmware.sh  generate_keys.sh  sign_firmware.sh
types/: project.ts
(+102 files in other folders)
